spade-tests/src/snapshots/spade_tests__typeinference__too_small_index_size_on_memory_read_port_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
use std::mem::clocked_memory;
use std::mem::read_memory;

entity test(clk: clock, idx: uint<3>) -> int<8> {
    let mem: Memory<int<8>, 16> = inst clocked_memory(clk, [(true, idx, 0)]);
    0
}


error: Expected type [(bool, uint<3>, int<8>); 1], got [(bool, uint<4>, int<8>); 1]
  ┌─ testinput:5:60
  │
5 │     let mem: Memory<int<8>, 16> = inst clocked_memory(clk, [(true, idx, 0)]);
  │                                                            ^^^^^^^^^^^^^^^^ Expected [(bool, uint<3>, int<8>); 1], got [(bool, uint<4>, int<8>); 1]
  │
  = note: Expected: 3
                in: [(bool, uint<3>, int<8>); 1]
               Got: 4
                in: [(bool, uint<4>, int<8>); 1]
  = note: because the value is used as an index to a memory
